# usv-autopilot

./: .editorconfig  .gitattributes  .gitignore  README.md  environment.yml
analysis/: README.md
analysis/sims/: ekf_noise_demo.py
datasets/: README.md
docs/: architecture.md  glossary.md  index.md
docs/actuation/: actuation_command_pipeline_spec.md
docs/adr/: 0001-workflow-and-docs.md  0002-qgc-first-mavlink-strategy.md
docs/comms/: mavlink_mapping.md  overview.md  params.md  protocol.md  qgc_integration_plan.md  telemetry.md  telemetry_implementation_plan.md
docs/control/: actuation_command_pipeline_spec.md  cascaded_heading_yawrate.md  command_shaping.md  mixer_and_limits.md  overview.md  speed_controller.md
docs/estimation/: ekf_design.md  failure_modes.md  measurement_models.md  overview.md  process_model_v1.md  tuning.md
docs/figures/: README.md
docs/groundstation/: backend.md  data_model.md  dev_setup.md  frontend.md  (+1 more)
firmware/: README.md
groundstation/: README.md
test_runs/: README.md
tests/: README.md
tools/: README.md  check_docs_contracts.py  emit_dummy_telemetry.py  generate_dummy_logs.py
tools/usv_sim/: README.md  pyproject.toml
tools/usv_sim/tests/: __init__.py  test_dummy_telemetry.py  test_estimation.py  test_log_io.py  test_logging_contract_sync.py
tools/usv_sim/usv_sim/: __init__.py
tools/usv_sim/usv_sim/digital_twin/: __init__.py  compat.py  contracts.py  current.py  process_model.py  simulate.py
tools/usv_sim/usv_sim/digital_twin/estimation/: __init__.py  ekf.py
tools/usv_sim/usv_sim/experimental/: __init__.py
(+30 files in other folders)
