# tools/usv_sim/pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usv-sim"
version = "0.0.0"
description = "USV autopilot simulation helpers (model, guidance, control)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.24",
  "packaging>=23.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["usv_sim*"]
